progress. fix header and footer stretch.

--- a/style/index.css
+++ b/style/index.css
@@ -42,7 +42,7 @@ table {
     margin:0;
     padding:0;
     max-width: 100%;
-    border:1px solid grey;
+    /* border:1px solid grey; */
 }
 /* general styles */
 html{
@@ -61,14 +61,49 @@ h1{
     margin-top:5%;
 }
 
+/* Top Styling */
 /* image next to h1 */
+.top{
+    display:flex;
+    justify-content: space-evenly;
+    align-items:center;
+}
+
 .top-img{
-    background-image: url('../images/placeholder.png');
-    background-size:cover;
-    background-repeat: no-repeat;
-    background-attachment: fixed;
-    height: 40vh;
-    background-position: center;
+    width:45%;
+}
+
+.text{
+    display:flex;
+    flex-direction: column;
+    width:45%;
+    justify-content: center;
+}
+
+.text h2, .text p{
+    text-align: center;
+}
+
+.text h2{
+    font-size: 3.5rem;
+}
+
+.projects-button{
+    width:20%;
+    margin: 1% 0;
+    margin-left:40%;
+}
+
+/* Project Array */
+.project-array{
+    display:flex;
+    flex-wrap:wrap;
+    justify-content: space-evenly;
+    align-items:center;
+}
+
+.image-and-caption p{
+    text-align: center;
 }
 
 header, footer{
@@ -89,6 +124,7 @@ header, footer{
     text-decoration: none;
     color: #4f4f4f;
     background-color: #fff;
+    border: 2px solid black;
 }
 
 .link a{
